# platformer-sample-gameplay3d

./: CMakeLists.txt  README.md  game.config  game.doxyfile  mklink_win32.bat
android/: AndroidManifest.xml  build.xml
android/jni/: Android.mk  Application.mk
raw/levels/: 0.json  0.level  0.tmx
raw/spritesheets/: enemy.json  enemy.tps  player.json  player.tps  tiles.tps
raw/templates/: Android.mk
res/audio/: player.audio
res/fonts/: debug.gpb
res/gameobjects/: enemy_slime.go  enemy_snail.go  enemy_spider.go  level_0.go  player.go  root.go
res/levels/: 0.level
res/lua/: platformer.lua  tools.lua
res/lua/tools/: build_android.lua  clean_android.lua  deploy_android.lua  generate_android.lua  generate_lua_bindings.lua
res/physics/: characters.physics  level.physics
res/scenes/: gameobjects.scene
res/spritesheets/: enemy.ss  player.ss
res/ui/: gamepad.form  gamepad.theme
src/: CameraControlComponent.cpp  CameraControlComponent.h  CollisionHandlerComponent.cpp  CollisionHandlerComponent.h  CollisionObjectComponent.cpp  CollisionObjectComponent.h  Common.cpp  Common.h  Common.inl  Component.cpp  Component.h  EnemyComponent.cpp  EnemyComponent.h  GameObject.cpp  GameObject.h  GameObject.inl  GameObjectController.cpp  GameObjectController.h  GameObjectController.inl  LevelComponent.cpp  LevelComponent.h  LevelRendererComponent.cpp  LevelRendererComponent.h  Messages.h  MessagesInput.cpp  MessagesInput.h  MessagesLevel.cpp  MessagesLevel.h  MessagesPlatformer.cpp  MessagesPlatformer.h  MessagesPlayer.cpp  MessagesPlayer.h  NodeData.h  Platformer.cpp  Platformer.h  PlatformerEventForwarderComponent.cpp  PlatformerEventForwarderComponent.h  PlayerAudioComponent.cpp  PlayerAudioComponent.h  PlayerComponent.cpp  (+11 more)
src/lua/: lua_GameObject.cpp  lua_GameObject.h  lua_GameObjectController.cpp  lua_GameObjectController.h  lua_Global.cpp  lua_Global.h  lua_all_bindings.cpp  lua_all_bindings.h
